# finreport-fetcher

./: .gitignore  README.md  USER_REQUESTS.md  USER_REQUIREMENTS.md  charts.toml.example  pyproject.toml  requirements.txt
config/: company_categories.toml
docs/: DATA_DIR.md  INSTALL.md  QUICKSTART.md  RAW_LIFECYCLE.md  README.md  TEMPLATE_GUIDE.md  TESTING.md  TROUBLESHOOTING.md  WEB_UI.md  WORKFLOW.md  merge.md  price_line.md
finchart_merge/: __init__.py  cli.py
fincompany_fetcher/: cli.py  dataset.py
finindex_fetcher/: cli.py  raw_store.py
finmetrics_fetcher/: cli.py  dataset.py  raw_store.py
finprice_fetcher/: __init__.py  cli.py  raw_store.py
finreport_charts/: cli.py
finreport_fetcher/: cli.py  company_basics_cli.py  financial_metrics_cli.py  global_datasets.py  metrics_sheet.py  raw_store.py
finreport_web/: cli.py  server.py
finshared/: cli_entry.py  company_categories.py  global_datasets.py  global_series.py  symbols.py
output/: finreport_fetcher.py
report_templates/: bank.toml  insurance.toml  non_financial.toml  securities.toml
scripts/: generate_category_report_templates.py  regression_test.sh  scan_uncommon_subjects.py  smoke_test.sh  sync_to_vm.sh
templates/: README.md  asset_scale_peer#资产规模对比.toml  asset_structure#资产结构.toml  balance_sheet_analysis#资产负债表分析.toml  balance_sheet_analysis.toml  bs_key_items_structure#资产负债表关键科目结构分析.toml  bs_key_items_structure.toml  cashflow_structure#现金流结构.toml  cashflow_trend#现金流趋势.toml  expense_structure#成本结构.toml  income_trend#收入趋势.toml  liability_structure#负债结构.toml  liability_structure.toml  net_assets_trend#资产趋势.toml  net_assets_trend.toml  net_profit_peer#净利润同业分析.toml  net_profit_peer.toml  net_profit_q#归母净利润.toml  net_profit_q.toml  nonfin-peer-asset_scale.toml  nonfin-peer-net_profit.toml  nonfin-peer-profit.toml  nonfin-peer-revenue.toml  nonfin-peer-roe.toml  nonfin-structure-asset_structure.toml  nonfin-structure-balance_sheet_analysis.toml  nonfin-structure-bs_key_items.toml  nonfin-structure-cashflow_structure.toml  nonfin-structure-expense.toml  nonfin-structure-liability.toml  nonfin-trend-cashflow.toml  nonfin-trend-ebitda.toml  nonfin-trend-ev_ebitda.toml  nonfin-trend-income.toml  nonfin-trend-net_assets.toml  nonfin-trend-net_profit_q.toml  (+32 more)
(+79 files in other folders)
