[project]
name = "finreport-fetcher"
version = "0.1.0"
description = "A-share financial statement fetcher (BS/IS/CF) with Excel export and PDF download"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OpenClaw" }]
dependencies = [
  "pandas>=2.2.0",
  "openpyxl>=3.1.2",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "python-dateutil>=2.9.0",
  "requests>=2.31.0",
  "akshare>=1.18.0",
  "matplotlib>=3.5.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
tushare = ["tushare>=1.4.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
finfetch = "finreport_fetcher.cli:app"
fincompany = "fincompany_fetcher.cli:app"
finmetrics = "finmetrics_fetcher.cli:app"
finchart = "finreport_charts.cli:app"
finprice = "finprice_fetcher.cli:app"
finmerge = "finchart_merge.cli:app"
finweb = "finreport_web.cli:app"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100

[tool.setuptools.packages.find]
include = ["finreport_fetcher*", "fincompany_fetcher*", "finmetrics_fetcher*", "finreport_charts*", "finprice_fetcher*", "finchart_merge*", "finreport_web*"]
exclude = ["output*", "templates*"]

[tool.setuptools.package-data]
finreport_web = ["static/*.html", "static/*.css", "static/*.js"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
